--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsdom": "^16.4.0",
-    "marked": "^1.2.5",
+    "marked": ">=4.0.10",
     "mongoose": "^5.10.14",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
